# psc-inspect

./: LICENSE  README.md  psc-inspect.cabal
app/: Main.hs
src/: PscInspect.hs
test/: Spec.hs
