name:                psc-inspect
version:             0.1.0.0
synopsis:            Library and cli tool for inspecting Purescript modules
description:         Please see README.md
homepage:            http://github.com/sgronblo/psc-inspect
license:             BSD3
license-file:        LICENSE
author:              Sam Grönblom
maintainer:          sgronblo@gmail.com
-- copyright:
category:            Purescript utilities
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PscInspect
  build-depends:       base >= 4.7 && < 5,
                       directory >= 1.2,
                       filepath >= 1.4
  default-language:    Haskell2010

executable psc-inspect
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       psc-inspect
  default-language:    Haskell2010

test-suite psc-inspect-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       psc-inspect,
                       hspec >= 2.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgronblo/psc-inspect
